--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <title>Run Buddy</title>
+        <link rel="stylesheet" href="./assets/css/style.css" />
     </head>
     <body>
         <!-- navigation -->
@@ -31,9 +32,12 @@
             </nav>
         </header>
 
-        <!-- jero/jumbotron -->
+        <!-- hero/jumbotron -->
         <section>
-
+            <div>
+                <h3>Get Started Today</h3>
+                <p>Fill out this form and one of our trainers will schedule a consult</p>
+            </div>
         </section>
 
         <!-- "what we do" section -->
@@ -59,6 +63,10 @@
         <!-- footer -->
         <footer>
             <h2>❤️ Made with love by Run Buddy.</h2>
+            <div>
+                <a href="#">Read Our Privacy Policy</a><br />
+                &copy; 2019 Run Buddy, Inc.
+            </div>
         </footer>
     </body>
 </html>
